fixed the bug by adding visibility : hidden  when dialog is faded out

--- a/src/styles/walter.css
+++ b/src/styles/walter.css
@@ -59,6 +59,9 @@
   transition: all 0.3s ease-in;
   z-index: 0;
   animation: 0.3s ease-in 0s 1 normal both fade-out;
+  & p {
+    visibility: hidden;
+  }
 }
 
 .walter-container .button-close-infotip {
@@ -96,18 +99,21 @@
     opacity: 1;
     width: 230px;
     padding: 1.2rem;
+    visibility: visible;
   }
 
   99% {
     opacity: 0;
     width: 230px;
     padding: 1.2rem;
+    visibility: visible;
   }
 
   100% {
     opacity: 0;
     width: 0px;
     padding: 0;
+    visibility: hidden;
   }
 }
 
